--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@ Here, we showcase four kinds of anonymized speech:
     </tbody>
 </table>
 
-<h2>Libri-Dev Male</h2>
+<h2>Libri-Dev Female</h2>
 <table>
     <thead>
         <tr>
             <th>USPAnon</th>
-            <th>RS</th>
+            <th>PSD</th>
             <th>RS</th>
             <th>Farthest</th>
         </tr>
@@ -151,22 +151,22 @@ Here, we showcase four kinds of anonymized speech:
         <tr>
             <td>
                 <audio controls="">
-                    <source src="U2SAnon/libri-dev/male/84-121550-0000.wav">
+                    <source src="U2SAnon/libri-dev/female/84-121550-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/male/84-121550-0000.wav">
+                    <source src="PSD/libri-dev/female/84-121550-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/male/84-121550-0000.wav">
+                    <source src="RS/libri-dev/female/84-121550-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="Farthest/libri-dev/male/84-121550-0000.wav">
+                    <source src="Farthest/libri-dev/female/84-121550-0000.wav">
                 </audio>
             </td>
         </tr>
@@ -179,17 +179,17 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/male/1462-170142-0000.wav">
+                    <source src="PSD/libri-dev/female/1462-170142-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/male/1462-170142-0000.wav">
+                    <source src="RS/libri-dev/female/1462-170142-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="Farthest/libri-dev/male/1462-170142-0000.wav">
+                    <source src="Farthest/libri-dev/female/1462-170142-0000.wav">
                 </audio>
             </td>
         </tr>
@@ -197,7 +197,12 @@ Here, we showcase four kinds of anonymized speech:
         <tr>
             <td>
                 <audio controls="">
-                    <source src="U2SAnon/libri-dev/male/84-121550-0001.wav">
+                    <source src="U2SAnon/libri-dev/female/84-121550-0001.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="PSD/libri-dev/female/84-121550-0001.wav">
                 </audio>
             </td>
             <td>
@@ -207,12 +212,7 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/male/84-121550-0001.wav">
-                </audio>
-            </td>
-            <td>
-                <audio controls="">
-                    <source src="Farthest/libri-dev/male/84-121550-0001.wav">
+                    <source src="Farthest/libri-dev/female/84-121550-0001.wav">
                 </audio>
             </td>
         </tr>
@@ -221,22 +221,22 @@ Here, we showcase four kinds of anonymized speech:
         <tr>
             <td>
                 <audio controls="">
-                    <source src="U2SAnon/libri-dev/male/1462-170142-0001.wav">
+                    <source src="U2SAnon/libri-dev/female/1462-170142-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/male/1462-170142-0001.wav">
+                    <source src="PSD/libri-dev/female/1462-170142-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/male/1462-170142-0001.wav">
+                    <source src="RS/libri-dev/female/1462-170142-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="Farthest/libri-dev/male/1462-170142-0001.wav">
+                    <source src="Farthest/libri-dev/female/1462-170142-0001.wav">
                 </audio>
             </td>
         </tr>
