--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 Here, we showcase four kinds of anonymized speech:
 (1)USPAnon
-(2)RS;
+(2)PSD;
 (3)RS;
 (4)Farthest;
 
@@ -35,7 +35,7 @@ Here, we showcase four kinds of anonymized speech:
         <tr>
             <th>Audio Name</th>
             <th>USPAnon</th>
-            <th>RS</th>
+            <th>PSD</th>
             <th>RS</th>
             <th>Farthest</th>
         </tr>
@@ -51,7 +51,7 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/male/174-50561-0000.wav">
+                    <source src="psd/libri-dev/male/174-50561-0000.wav">
                 </audio>
             </td>
             <td>
@@ -75,7 +75,7 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/male/251-136532-0000.wav">
+                    <source src="psd/libri-dev/male/251-136532-0000.wav">
                 </audio>
             </td>
             <td>
@@ -99,7 +99,7 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/male/174-50561-0001.wav">
+                    <source src="psd/libri-dev/male/174-50561-0001.wav">
                 </audio>
             </td>
             <td>
@@ -124,7 +124,7 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/male/251-136532-0001.wav">
+                    <source src="psd/libri-dev/male/251-136532-0001.wav">
                 </audio>
             </td>
             <td>
@@ -163,7 +163,7 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="PSD/libri-dev/female/1462-170142-0000.wav">
+                    <source src="psd/libri-dev/female/1462-170142-0000.wav">
                 </audio>
             </td>
             <td>
@@ -187,7 +187,7 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="PSD/libri-dev/female/84-121550-0001.wav">
+                    <source src="psd/libri-dev/female/84-121550-0001.wav">
                 </audio>
             </td>
             <td>
@@ -212,7 +212,7 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="PSD/libri-dev/female/1462-170142-0001.wav">
+                    <source src="psd/libri-dev/female/1462-170142-0001.wav">
                 </audio>
             </td>
             <td>
