--- a/index.html
+++ b/index.html
@@ -24,17 +24,22 @@
 <br/>
 
 Here, we showcase four kinds of anonymized speech:
-(1)USPAnon
-(2)PSD;
-(3)RS;
-(4)Farthest;
+(1)RS;
+(2)Average;
+(3)PSD;
+(4)GAN(N);
+(5)GAB(U);
+(6)SpkrAnon-MLP(N);
+(7)SpkrAnon-MLP(U);
+(8)SpkrAnon-Diff(N);
+(9)SpkrAnon-Diff(U);
 
 <h2>Libri-Dev Male</h2>
 <table>
     <thead>
         <tr>
             <th>Audio Name</th>
-            <th>USPAnon</th>
+            <th>SpkrAnon</th>
             <th>PSD</th>
             <th>RS</th>
             <th>Farthest</th>
