--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Here, we showcase four kinds of anonymized speech:
 (2)Average;
 (3)PSD;
 (4)GAN(N);
-(5)GAB(U);
+(5)GAN(U);
 (6)SpkrAnon-MLP(N);
 (7)SpkrAnon-MLP(U);
 (8)SpkrAnon-Diff(N);
