--- a/index.html
+++ b/index.html
@@ -29,44 +29,74 @@ Here, we showcase four kinds of anonymized speech:
 (3)PSD;
 (4)GAN(N);
 (5)GAN(U);
-(6)SpkrAnon-MLP(N);
-(7)SpkrAnon-MLP(U);
-(8)SpkrAnon-Diff(N);
-(9)SpkrAnon-Diff(U);
+(6)IDMap-MLP(N);
+(7)IDMap-MLP(U);
+(8)IDMap-Diff(N);
+(9)IDMap-Diff(U);
 
 <h2>Libri-Dev Male</h2>
 <table>
     <thead>
         <tr>
             <th>Audio Name</th>
-            <th>SpkrAnon</th>
-            <th>PSD</th>
             <th>RS</th>
-            <th>Farthest</th>
+            <th>Average</th>
+            <th>PSD</th>
+            <th>GAN(N)</th>
+            <th>GAN(U)</th>
+            <th>IDMap-MLP(N)</th>
+            <th>IDMap-MLP(U)</th>
+            <th>IDMap-Diff(N)</th>
+            <th>IDMap-Diff(U)</th>  
         </tr>
     </thead>
     <tbody>
         <!-- 第一行 -->
         <tr>
-            <td>174-50561-0000</td> <!-- 音频名称 -->
+            <td>1272-128104-0000</td> <!-- 音频名称 -->
             <td>
                 <audio controls="">
-                    <source src="U2SAnon/libri-dev/male/174-50561-0000.wav">
+                    <source src="RS/wav/1272-128104-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="psd/libri-dev/male/174-50561-0000.wav">
+                    <source src="Average/wav/1272-128104-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/male/174-50561-0000.wav">
+                    <source src="PSD/wav/1272-128104-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="Farthest/libri-dev/male/174-50561-0000.wav">
+                    <source src="GAN(N)/wav/1272-128104-0000.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="GAN(U)/wav/1272-128104-0000.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(N)/wav/1272-128104-0000.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(U)/wav/1272-128104-0000.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-Diff(N)/wav/1272-128104-0000.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(U)/wav/1272-128104-0000.wav">
                 </audio>
             </td>
         </tr>
@@ -75,22 +105,22 @@ Here, we showcase four kinds of anonymized speech:
             <td>251-136532-0000</td> <!-- 音频名称 -->
             <td>
                 <audio controls="">
-                    <source src="U2SAnon/libri-dev/male/251-136532-0000.wav">
+                    <source src="U2SAnon/wav/251-136532-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="psd/libri-dev/male/251-136532-0000.wav">
+                    <source src="psd/wav/251-136532-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/male/251-136532-0000.wav">
+                    <source src="RS/wav/251-136532-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="Farthest/libri-dev/male/251-136532-0000.wav">
+                    <source src="Farthest/wav/251-136532-0000.wav">
                 </audio>
             </td>
         </tr>
@@ -99,22 +129,22 @@ Here, we showcase four kinds of anonymized speech:
             <td>174-50561-0001</td> <!-- 音频名称 -->
             <td>
                 <audio controls="">
-                    <source src="U2SAnon/libri-dev/male/174-50561-0001.wav">
+                    <source src="U2SAnon/wav/174-50561-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="psd/libri-dev/male/174-50561-0001.wav">
+                    <source src="psd/wav/174-50561-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/male/174-50561-0001.wav">
+                    <source src="RS/wav/174-50561-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="Farthest/libri-dev/male/174-50561-0001.wav">
+                    <source src="Farthest/wav/174-50561-0001.wav">
                 </audio>
             </td>
         </tr>
@@ -124,22 +154,22 @@ Here, we showcase four kinds of anonymized speech:
             <td>251-136532-0001</td> <!-- 音频名称 -->
             <td>
                 <audio controls="">
-                    <source src="U2SAnon/libri-dev/male/251-136532-0001.wav">
+                    <source src="U2SAnon/wav/251-136532-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="psd/libri-dev/male/251-136532-0001.wav">
+                    <source src="psd/wav/251-136532-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/male/251-136532-0001.wav">
+                    <source src="RS/wav/251-136532-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="Farthest/libri-dev/male/251-136532-0001.wav">
+                    <source src="Farthest/wav/251-136532-0001.wav">
                 </audio>
             </td>
         </tr>
@@ -197,7 +227,7 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/male/84-121550-0000.wav">
+                    <source src="RS/wav/84-121550-0000.wav">
                 </audio>
             </td>
             <td>
