--- a/index.html
+++ b/index.html
@@ -102,76 +102,151 @@ Here, we showcase four kinds of anonymized speech:
         </tr>
         <!-- 第二行 -->
         <tr>
-            <td>251-136532-0000</td> <!-- 音频名称 -->
+            <td>1272-128104-0001</td> <!-- 音频名称 -->
             <td>
                 <audio controls="">
-                    <source src="U2SAnon/wav/251-136532-0000.wav">
+                    <source src="RS/wav/1272-128104-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="psd/wav/251-136532-0000.wav">
+                    <source src="Average/wav/1272-128104-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/wav/251-136532-0000.wav">
+                    <source src="PSD/wav/1272-128104-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="Farthest/wav/251-136532-0000.wav">
+                    <source src="GAN(N)/wav/1272-128104-0001.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="GAN(U)/wav/1272-128104-0001.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(N)/wav/1272-128104-0001.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(U)/wav/1272-128104-0001.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-Diff(N)/wav/1272-128104-0001.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(U)/wav/1272-128104-0001.wav">
                 </audio>
             </td>
         </tr>
         <!-- 第三行 -->
         <tr>
-            <td>174-50561-0001</td> <!-- 音频名称 -->
+            <td>174-168635-0004</td> <!-- 音频名称 -->
             <td>
                 <audio controls="">
-                    <source src="U2SAnon/wav/174-50561-0001.wav">
+                    <source src="RS/wav/174-168635-0004.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="psd/wav/174-50561-0001.wav">
+                    <source src="Average/wav/174-168635-0004.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/wav/174-50561-0001.wav">
+                    <source src="PSD/wav/174-168635-0004.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="Farthest/wav/174-50561-0001.wav">
+                    <source src="GAN(N)/wav/174-168635-0004.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="GAN(U)/wav/174-168635-0004.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(N)/wav/174-168635-0004.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(U)/wav/174-168635-0004.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-Diff(N)/wav/174-168635-0004.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(U)/wav/174-168635-0004.wav">
                 </audio>
             </td>
         </tr>
-
         <!-- 第四行 -->
         <tr>
-            <td>251-136532-0001</td> <!-- 音频名称 -->
+            <td>174-168635-0005</td> <!-- 音频名称 -->
             <td>
                 <audio controls="">
-                    <source src="U2SAnon/wav/251-136532-0001.wav">
+                    <source src="RS/wav/174-168635-0005.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="psd/wav/251-136532-0001.wav">
+                    <source src="Average/wav/174-168635-0005.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/wav/251-136532-0001.wav">
+                    <source src="PSD/wav/174-168635-0005.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="Farthest/wav/251-136532-0001.wav">
+                    <source src="GAN(N)/wav/174-168635-0005.wav">
                 </audio>
             </td>
+            <td>
+                <audio controls="">
+                    <source src="GAN(U)/wav/174-168635-0005.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(N)/wav/174-168635-0005.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(U)/wav/174-168635-0005.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-Diff(N)/wav/174-168635-0005.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(U)/wav/174-168635-0005.wav">
+                </audio>
+            </td>
+        </tr>
         </tr>
     </tbody>
 </table>
@@ -181,115 +256,217 @@ Here, we showcase four kinds of anonymized speech:
     <thead>
         <tr>
             <th>Audio Name</th>
-            <th>USPAnon</th>
-            <th>PSD</th>
             <th>RS</th>
-            <th>Farthest</th>
+            <th>Average</th>
+            <th>PSD</th>
+            <th>GAN(N)</th>
+            <th>GAN(U)</th>
+            <th>IDMap-MLP(N)</th>
+            <th>IDMap-MLP(U)</th>
+            <th>IDMap-Diff(N)</th>
+            <th>IDMap-Diff(U)</th>  
         </tr>
     </thead>
     <tbody>
         <!-- 第一行 -->
         <tr>
-            <td>1462-170142-0000</td> <!-- 音频名称 -->
+            <td>84-121123-0000</td> <!-- 音频名称 -->
             <td>
                 <audio controls="">
-                    <source src="U2SAnon/libri-dev/female/1462-170142-0000.wav">
+                    <source src="RS/wav/84-121123-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="psd/libri-dev/female/1462-170142-0000.wav">
+                    <source src="Average/wav/84-121123-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/female/1462-170142-0000.wav">
+                    <source src="PSD/wav/84-121123-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="Farthest/libri-dev/female/1462-170142-0000.wav">
+                    <source src="GAN(N)/wav/84-121123-0000.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="GAN(U)/wav/84-121123-0000.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(N)/wav/84-121123-0000.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(U)/wav/84-121123-0000.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-Diff(N)/wav/84-121123-0000.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(U)/wav/84-121123-0000.wav">
                 </audio>
             </td>
         </tr>
         <!-- 第二行 -->
         <tr>
-            <td>84-121550-0000</td> <!-- 音频名称 -->
+            <td>84-121123-0001</td> <!-- 音频名称 -->
             <td>
                 <audio controls="">
-                    <source src="U2SAnon/libri-dev/female/84-121550-0000.wav">
+                    <source src="RS/wav/84-121123-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="psd/libri-dev/female/84-121550-0000.wav">
+                    <source src="Average/wav/84-121123-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/wav/84-121550-0000.wav">
+                    <source src="PSD/wav/84-121123-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="Farthest/libri-dev/female/84-121550-0000.wav">
+                    <source src="GAN(N)/wav/84-121123-0001.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="GAN(U)/wav/84-121123-0001.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(N)/wav/84-121123-0001.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(U)/wav/84-121123-0001.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-Diff(N)/wav/84-121123-0001.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(U)/wav/84-121123-0000.wav">
                 </audio>
             </td>
         </tr>
-
         <!-- 第三行 -->
         <tr>
-            <td>1462-170142-0001</td> <!-- 音频名称 -->
+            <td>1462-170138-0000</td> <!-- 音频名称 -->
             <td>
                 <audio controls="">
-                    <source src="U2SAnon/libri-dev/female/1462-170142-0001.wav">
+                    <source src="RS/wav/1462-170138-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="psd/libri-dev/female/1462-170142-0001.wav">
+                    <source src="Average/wav/1462-170138-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="Farthest/libri-dev/female/1462-170142-0001.wav">
+                    <source src="PSD/wav/1462-170138-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="Farthest/libri-dev/female/1462-170142-0001.wav">
+                    <source src="GAN(N)/wav/1462-170138-0000.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="GAN(U)/wav/1462-170138-0000.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(N)/wav/1462-170138-0000.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(U)/wav/1462-170138-0000.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-Diff(N)/wav/1462-170138-0000.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(U)/wav/1462-170138-0000.wav">
                 </audio>
             </td>
         </tr>
-
         <!-- 第四行 -->
         <tr>
-            <td>84-121550-0001</td> <!-- 音频名称 -->
+            <td>1462-170138-0003</td> <!-- 音频名称 -->
             <td>
                 <audio controls="">
-                    <source src="U2SAnon/libri-dev/female/84-121550-0001.wav">
+                    <source src="RS/wav/1462-170138-0003.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="psd/libri-dev/female/84-121550-0001.wav">
+                    <source src="Average/wav/1462-170138-0003.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="RS/libri-dev/female/84-121550-0001.wav">
+                    <source src="PSD/wav/1462-170138-0003.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="Farthest/libri-dev/female/84-121550-0001.wav">
+                    <source src="GAN(N)/wav/1462-170138-0003.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="GAN(U)/wav/1462-170138-0003.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(N)/wav/1462-170138-0003.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(U)/wav/1462-170138-0003.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-Diff(N)/wav/1462-170138-0003.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
+                    <source src="IDMap-MLP(U)/wav/1462-170138-0003.wav">
                 </audio>
             </td>
         </tr>
-        
+        </tr>
     </tbody>
 </table>
-
 
 <!-- Repeat the same structure for other sections (Libri-Dev Female, Libri-Test Male, and Libri-Test Female) -->
 <!-- Make sure to add the 'Farthest' column and the corresponding audio sources in each section. -->
